Corrections OFA : Clear console ok et lancement application depuis archive JAR. (#1)