@@ -2,25 +2,20 @@ package fr.DocMcCoy30.EscapeGame.utils;
 
 public class Utils {
 
-    public final static void clearConsole()
-    {
-        try
-        {
+    public final static void clearConsole() {
+        try {
             final String os = System.getProperty("os.name");
-            System.out.println("os = " + os);
-            if (os.contains("Windows 10"))
-            {
-                System.out.println("cls");
-                Runtime.getRuntime().exec("cls");
+
+            if (os.contains("Windows 10")) {
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             }
             else
             {
                 Runtime.getRuntime().exec("clear");
             }
         }
-        catch (final Exception e)
-        {
-            //  Handle any exceptions.
+        catch (final Exception e) {
+            e.printStackTrace();
         }
     }
 }
